// Copyright 2026 Ardika Saputro.
// Licensed under the Apache License, Version 2.0.

// Code generated by protoc-gen-go. DO NOT EDIT.
// This file is manually written to define the proto messages.
// Run `make generate-proto` to regenerate from .proto file.

syntax = "proto3";

package hibernator.v1alpha1;

option go_package = "github.com/ardikabs/hibernator/api/streaming/v1alpha1";

// ExecutionService handles streaming communication between runners and the control plane.
service ExecutionService {
  // StreamLogs streams log lines from a runner to the control plane.
  // The runner opens a client-streaming RPC and sends log entries.
  rpc StreamLogs(stream LogEntry) returns (StreamLogsResponse);

  // ReportProgress reports execution progress updates.
  rpc ReportProgress(ProgressReport) returns (ProgressResponse);

  // ReportCompletion reports final execution result.
  rpc ReportCompletion(CompletionReport) returns (CompletionResponse);

  // Heartbeat keeps the connection alive and reports runner health.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// LogEntry represents a single log line from the runner.
message LogEntry {
  // execution_id is the unique identifier for this execution.
  string execution_id = 1;

  // timestamp is when the log was generated (RFC3339).
  string timestamp = 2;

  // level is the log level (DEBUG, INFO, WARN, ERROR).
  string level = 3;

  // message is the log content.
  string message = 4;

  // fields are structured log fields.
  map<string, string> fields = 5;
}

// StreamLogsResponse is the response after log streaming completes.
message StreamLogsResponse {
  // received_count is the number of log entries received.
  int64 received_count = 1;
}

// ProgressReport reports execution progress.
message ProgressReport {
  // execution_id is the unique identifier for this execution.
  string execution_id = 1;

  // phase is the current execution phase.
  string phase = 2;

  // progress_percent is the estimated progress (0-100).
  int32 progress_percent = 3;

  // message describes the current activity.
  string message = 4;

  // timestamp is when this progress was reported (RFC3339).
  string timestamp = 5;
}

// ProgressResponse acknowledges a progress report.
message ProgressResponse {
  // acknowledged indicates the progress was received.
  bool acknowledged = 1;
}

// CompletionReport reports the final result of an execution.
message CompletionReport {
  // execution_id is the unique identifier for this execution.
  string execution_id = 1;

  // success indicates whether the execution succeeded.
  bool success = 2;

  // error_message contains the error if success is false.
  string error_message = 3;

  // duration_ms is the execution duration in milliseconds.
  int64 duration_ms = 4;

  // restore_data contains serialized restore metadata (JSON).
  bytes restore_data = 5;

  // timestamp is when execution completed (RFC3339).
  string timestamp = 6;
}

// CompletionResponse acknowledges a completion report.
message CompletionResponse {
  // acknowledged indicates the completion was received.
  bool acknowledged = 1;

  // restore_ref is the reference where restore data was stored.
  string restore_ref = 2;
}

// HeartbeatRequest is a keep-alive message.
message HeartbeatRequest {
  // execution_id is the unique identifier for this execution.
  string execution_id = 1;

  // timestamp is when the heartbeat was sent (RFC3339).
  string timestamp = 2;
}

// HeartbeatResponse acknowledges a heartbeat.
message HeartbeatResponse {
  // acknowledged indicates the heartbeat was received.
  bool acknowledged = 1;

  // server_time is the server's current time (RFC3339).
  string server_time = 2;
}
